k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tucan-ical
  namespace: tucan-ical
  labels:
    app: tucan-ical
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: tucan-ical
